Teacher-get-push-put works successfully